# signal42-training-repository

homework-01/ema/: README.md
homework-01/ema/gitdash/: .gitignore  README.md  index.html  main.js  package-lock.json  package.json  preload.js
homework-01/ema/nerd-quest/: README.md  index.html  main.js  package-lock.json  package.json  renderer.js
homework-01/federico-quaglia/: CLAUDE.md  README.md  analyzer.py  requirements.txt
homework-01/michele_bertagni/: CLAUDE.md  game.js  index.html
homework-01/rosario/gatherer/: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  docker-compose.yml  starting-prompt.md
homework-01/rosario/gatherer/backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
homework-01/rosario/gatherer/backend/alembic/: env.py
homework-01/rosario/gatherer/backend/alembic/versions/: 0001_initial.py
homework-01/rosario/gatherer/backend/app/: config.py  domain.py  llm.py  logging.py  main.py  pipeline.py  prompts.py  scheduler.py
homework-01/rosario/gatherer/backend/app/api/: routes.py  schemas.py
homework-01/rosario/gatherer/backend/app/db/: base.py  models.py  repositories.py
homework-01/rosario/gatherer/backend/app/modules/: agent.py  fetch.py  finding_detection.py  images.py  rank_dedup.py  source_discovery.py
homework-01/rosario/gatherer/backend/tests/: conftest.py  test_agent_loop.py  test_finding_detection.py  test_rank_dedup.py
homework-01/rosario/gatherer/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  (+1 more)
homework-01/vale-ntino/: crossword-generator.html
(+12 files in other folders)
