[project]
name = "gatherer-backend"
version = "0.1.0"
description = "Personal tech-radar: per-topic web search + Claude digests."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.29",
    "alembic>=1.18,<1.19",
    "apscheduler>=3.11,<4.0",
    "anthropic>=0.109,<0.110",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "structlog>=24.1",
    "tavily-python>=0.7,<0.8",
    "trafilatura>=2.0,<2.1",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "anyio>=4.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
